[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log= "0.4.19"
actix-web = "4"
chrono = "0.4.34"
futures = "0.3.28"
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde = { version = "1.0.193", features = ["std", "derive", "alloc"], default-features = false }
serde_json = "1.0.108"
structopt = "0.3.26"
anyhow ="1.0.81"



