[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log= "0.4.19"
actix-web = "4"
chrono = "0.4.34"
futures = "0.3.28"
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde = { version = "1.0.193", features = ["std", "derive", "alloc"], default-features = false }
serde_json = "1.0.108"
actix-cors = "0.6.5"
actix-session = { version = "0.8.0", features = ["redis-actor-session"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jsonwebtoken = "9.2.0"
jwt = "0.16.0"
rand = "0.8.5"
reqwest = "0.11.22"
sha2 = "0.10.8"
simple_logger = "4.3.0"




